fix dark mode @media query

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,6 +26,6 @@ a {
 
 @media (prefers-color-scheme: dark) {
 	html {
-		color-scheme: light; /* TODO */
+		color-scheme: dark;
 	}
 }
